# llm-latency-lens

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPILATION-FIXES-COMPLETE.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_SUMMARY.md  Dockerfile  IMPLEMENTATION-STATUS.md  INFRASTRUCTURE.md  INFRASTRUCTURE_SUMMARY.md  MARKETING.md  Makefile  QUICKSTART.md  README.md  SECURITY.md  WASM-NPM-SETUP.md  WASM_BUILD_SUMMARY.md  WASM_FILES_CREATED.txt  cliff.toml  deny.toml  docker-compose.prod.yml  docker-compose.yml
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-build.yml  release.yml  security.yml
benches/: concurrent_requests.rs  timing_precision.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  timing.rs  types.rs
crates/exporters/: Cargo.toml
crates/exporters/src/: console.rs  csv.rs  json.rs  lib.rs  prometheus.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: aggregator.rs  collector.rs  lib.rs  stats.rs  types.rs
crates/providers/: Cargo.toml  README.md
crates/providers/src/: anthropic.rs  error.rs  google.rs  lib.rs  openai.rs  traits.rs
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_INDEX.md  ARCHITECTURE_SUMMARY.md  CI-CD.md  COORDINATION-REPORT.md  CRATE_STRUCTURE.md  DATA_FLOW.md  DELIVERY_SUMMARY.md  DEPLOYMENT.md  DOCKER.md  ECOSYSTEM_INTEGRATION.md  IMPLEMENTATION_GUIDE.md  INDEX.md  MISSION-COMPLETE.md  PLANNING_INDEX.md  PROJECT_ESTIMATES.md  RESEARCH_SUMMARY.md  ROADMAP.md  ROADMAP_DASHBOARD.md  START_HERE.md  STATUS.md  SWARM-EXECUTION-REPORT.md  TECHNICAL_SPECS.md  USER_GUIDE.md  VALIDATION_CRITERIA.md
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: llm-latency-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
plans/: DEPLOYMENT-INDEX.md  DEVELOPER-QUICKSTART.md  EXECUTIVE-SUMMARY.md  LLM-Latency-Lens-Plan.md  README.md  deployment-diagrams.md  deployment-quickstart.md  deployment-reference.md  deployment-strategy.md  deployment-summary.txt
scripts/: deploy.sh  release.sh  verify-infrastructure.sh
src/: cli.rs  config.rs  lib.rs  main.rs  orchestrator.rs
src/cli/commands/: benchmark.rs  compare.rs  export.rs  mod.rs  profile.rs  validate.rs
src/consumers/: analytics_hub.rs  mod.rs  observatory.rs  testbench.rs
