[package]
name = "llm-latency-lens-core"
version = "0.1.0"
edition = "2021"
authors = ["LLM DevOps Team"]
description = "Core types and timing engine for LLM Latency Lens"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quanta = "0.12"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
