[package]
name = "llm-latency-lens-exporters"
version = "0.1.0"
edition = "2021"
authors = ["LLM DevOps Team"]
description = "Export formats for LLM Latency Lens metrics"
license = "Apache-2.0"

[dependencies]
llm-latency-lens-core = { path = "../core" }
llm-latency-lens-metrics = { path = "../metrics" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prometheus = "0.13"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tokio = { version = "1.41", features = ["full"] }
tabled = "0.16"
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.13"
